# CV

./: .env  Dockerfile  db.sqlite3  pyproject.toml
mysite/: settings.py  views.py
